--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: quoted_string
 description: String quoting/unquoting. Provides an extension on String with quote() and unquote() methods.
-version: 0.1.0
+version: 0.1.0+1
 repository: https://github.com/f3ath/dart-quoted-string
 
 environment:
